--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,7 @@ repos:
       - id: detect-private-key
 
   - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: 'v1.10.0'
     hooks:
       - id: mypy
         additional_dependencies: [types-setuptools]
