--- a/.github/actions/prepare_snap7/action.yml
+++ b/.github/actions/prepare_snap7/action.yml
@@ -31,4 +31,10 @@ runs:
 
       - name: Update wheel
         shell: bash
-        run: python3 -m pip install --upgrade pip wheel build
+        if: ${{ runner.os != 'macOS' }}
+        run: python3 -m pip install --upgrade pip wheel build setuptools
+
+      - name: Update wheel
+        shell: bash
+        if: ${{ runner.os == 'macOS' }}
+        run: python3 -m pip install --upgrade pip wheel build setuptools --break-system-packages
