--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -44,7 +44,7 @@ jobs:
         run: |
           mkdir -p snap7/lib/
           Copy-Item .\snap7-full-1.4.2\release\Windows\Win64\snap7.dll .\snap7\lib
-          python3 -m build . --wheel -C="--build-option=--plat-name=win_amd64"
+          python3 -m build . --wheel -C="--plat-name=win_amd64"
           mkdir -p wheelhouse/${{ runner.os }}/
           cp dist/*.whl wheelhouse/${{ runner.os }}/
 
@@ -56,7 +56,7 @@ jobs:
 
   osx-build:
     name: Build wheel for osx
-    runs-on: macos-14
+    runs-on: macos-11
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -78,7 +78,7 @@ jobs:
 
       - name: Build wheel
         run: |
-          python3 -m build . --wheel -C="--build-option=--plat-name=macosx_10_9_universal2"
+          python3 -m build . --wheel -C="--plat-name=macosx_10_9_universal2"
           mkdir -p wheelhouse/${{ runner.os }}/
           cp dist/*.whl wheelhouse/${{ runner.os }}/
 
