--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Install snap7
         run: brew install snap7
+      - name: make a virtualenv
+        run: python3 -m venv venv && source venv/bin/activate
       - name: Upgrade pip
         run: python3 -m pip install --upgrade pip
       - name: Install python-snap7
