--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,35 +7,35 @@ on:
 jobs:
   linux-build-86_64:
     name: Build wheel for linux x86_64
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Prepare snap7 archive
         uses: ./.github/actions/prepare_snap7
 
       - name: Build wheel
-        uses: ./.github/actions/manylinux_2_24_x86_64
+        uses: ./.github/actions/manylinux_2_28_x86_64
         with:
           script: ./.github/build_scripts/build_package.sh
-          platform: manylinux_2_24_x86_64
+          platform: manylinux_2_28_x86_64
           makefile: x86_64_linux.mk
           python: /opt/python/cp38-cp38/bin/python
           wheeldir: wheelhouse/${{ runner.os }}/
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: wheels
           path: wheelhouse/*/*.whl
 
   windows-build:
     name: Build wheel for windows
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Prepare snap7 archive
         uses: ./.github/actions/prepare_snap7
@@ -49,17 +49,17 @@ jobs:
           cp dist/*.whl wheelhouse/${{ runner.os }}/
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: wheels
           path: wheelhouse/*/*.whl
 
   osx-build:
     name: Build wheel for osx
-    runs-on: macos-11
+    runs-on: macos-14
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Prepare snap7 archive
         uses: ./.github/actions/prepare_snap7
@@ -84,7 +84,7 @@ jobs:
 
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: wheels
           path: wheelhouse/*/*.whl
@@ -96,24 +96,24 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        os: [ubuntu-20.04, windows-2022, macos-14]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install pytest
         run: |
           python3 -m pip install --upgrade pip
-          python3 -m pip install pytest pytest-asyncio
+          python3 -m pip install pytest
 
       - name: Download artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: wheels
           path: wheelhouse
