--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -6,12 +6,14 @@ on:
     branches: [master]
 jobs:
   osx_wheel:
-    runs-on: macos-11
+    runs-on: macos-14
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Install snap7
         run: brew install snap7
+      - name: make a virtualenv
+        run: python3 -m venv venv && source venv/bin/activate
       - name: Upgrade pip
         run: python3 -m pip install --upgrade pip
       - name: Install python-snap7
