--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -14,10 +14,16 @@ jobs:
         run: |
           sudo apt-get update -qq
           sudo apt-get install -y python3-pip make
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.8
       - name: Install dependencies
         run: |
-          sudo python3 -m pip install --upgrade pip
-          sudo python3 -m pip install .[doc]
+          python3 -m venv venv
+          source venv/bin/activate
+          venv/bin/pip install --upgrade pip
+          venv/bin/pip install ".[test]"
       - name: Run doc
         run: |
           cd doc
