--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -27,10 +27,10 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install .[test]
+          python3 -m venv venv
+          venv/bin/pip install --upgrade pip
+          venv/bin/pip install ".[test]"
       - name: Run pytest
         run: |
-          which pytest
-          pytest -m "server or util or client or mainloop"
-          sudo /opt/hostedtoolcache/Python/${{ matrix.python-version }}*/x64/bin/pytest -m partner
+          venv/bin/pytest -m "server or util or client or mainloop"
+          sudo venv/bin/pytest -m partner
