trying to avoid circular import

--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -23,7 +23,7 @@ jobs:
           python3 -m venv venv
           source venv/bin/activate
           venv/bin/pip install --upgrade pip
-          venv/bin/pip install ".[test]"
+          venv/bin/pip install ".[doc]"
       - name: Run doc
         run: |
           cd doc
