--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -14,15 +14,15 @@ jobs:
         run: |
           sudo apt-get update -qq
           sudo apt-get install -y python3-pip make
-      - name: Set up Python 3.8
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version: 3.9
       - name: Install dependencies
         run: |
           python3 -m venv venv
           venv/bin/pip install --upgrade pip
-          venv/bin/pip install ".[doc]"
+          venv/bin/pip install ".[doc,cli]"
       - name: Run doc
         run: |
           source venv/bin/activate
