Also include submodules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,8 +39,7 @@ doc = ["sphinx", "sphinx_rtd_theme"]
 snap7 = ["py.typed", "lib/libsnap7.so", "lib/snap7.dll", "lib/libsnap7.dylib"]
 
 [tool.setuptools.packages.find]
-where = ["."]
-include = ["snap7", "snap7.lib"]
+include = ["snap7*"]
 
 [project.scripts]
 snap7-server = "snap7.server.__main__:main"
