--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,10 +4,12 @@ repos:
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
+      - id: check-ast
       - id: check-json
       - id: check-toml
       - id: check-xml
       - id: check-yaml
+      - id: check-merge-conflict
       - id: debug-statements
       - id: check-builtin-literals
       - id: check-case-conflict
@@ -25,3 +27,4 @@ repos:
     rev: 'v0.4.2'
     hooks:
       - id: ruff
+      - id: ruff-format
