--- a/.github/workflows/build-and-test-amd64.yml
+++ b/.github/workflows/build-and-test-amd64.yml
@@ -6,7 +6,7 @@ on:
     branches: [master]
 jobs:
   linux-build:
-    name: Build wheel for linux x86_64
+    name: Build wheel for linux AMD64
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
@@ -31,7 +31,7 @@ jobs:
           path: wheelhouse/*/*.whl
 
   windows-build:
-    name: Build wheel for windows
+    name: Build wheel for windows AMD64
     runs-on: windows-2022
     steps:
       - name: Checkout
@@ -55,7 +55,7 @@ jobs:
           path: wheelhouse/*/*.whl
 
   osx-build:
-    name: Build wheel for osx
+    name: Build wheel for osx AMD64
     runs-on: macos-11
     steps:
       - name: Checkout
@@ -91,9 +91,9 @@ jobs:
 
 
   test-wheels-86_64:
-    name: Testing wheels
+    name: Testing wheels for AMD64
     needs: [linux-build, windows-build, osx-build]
-    continue-on-error: true
+    if: success() || failure()  # this makes sure the job runs even if another matrix job failed
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
