--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,4 +1,4 @@
-name: Linux Test all Pythons
+name: Linux Test all Pythons with Debian packages
 on:
   push:
     branches: [master]
@@ -6,10 +6,12 @@ on:
     branches: [master]
 jobs:
   build:
-    runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        runs-on: ["ubuntu-20.04", "ubuntu-22.04"]
+    runs-on: ${{ matrix.runs-on }}
+    continue-on-error: true
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -32,5 +34,5 @@ jobs:
           venv/bin/pip install ".[test]"
       - name: Run pytest
         run: |
-          venv/bin/pytest tests/test_client.py tests/test_mainloop.py tests/test_server.py tests/test_util.py
-          sudo venv/bin/pytest tests/test_partner.py
+          venv/bin/pytest -m "server or util or client or mainloop"
+          sudo venv/bin/pytest -m partner
