--- a/.github/workflows/windows-test.yml
+++ b/.github/workflows/windows-test.yml
@@ -7,7 +7,10 @@ on:
 jobs:
   windows_wheel:
     continue-on-error: true
-    runs-on: windows-2022
+    strategy:
+      matrix:
+        runs-on: [ "windows-2022", "windows-2019" ]
+    runs-on: ${{ matrix.runs-on }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
