--- a/.github/workflows/windows-test.yml
+++ b/.github/workflows/windows-test.yml
@@ -10,10 +10,16 @@ jobs:
     strategy:
       matrix:
         runs-on: [ "windows-2022", "windows-2019" ]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
     runs-on: ${{ matrix.runs-on }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
       - name: Prepare snap7 archive
         uses: ./.github/actions/prepare_snap7
