--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,9 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "python-snap7"
-version = "1.4"
+version = "1.4.1"
 description = "Python wrapper for the snap7 library"
+readme = "README.rst"
 authors = [
     {name = "Gijs Molenaar", email = "gijsmolenaar@gmail.com"},
 ]
@@ -17,14 +18,14 @@ classifiers = [
     "Intended Audience :: Manufacturing",
     "License :: OSI Approved :: MIT License",
     "Operating System :: POSIX",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
-license = {text = "MIT"}
-requires-python = ">=3.8"
+license = {text = "MIT License"}
+requires-python = ">=3.9"
+keywords = ["snap7", "s7", "siemens", "plc"]
 
 [project.urls]
 Homepage = "https://github.com/gijzelaerr/python-snap7"
@@ -62,7 +63,7 @@ ignore_missing_imports = true
 [tool.ruff]
 output-format = "full"
 line-length = 130
-target-version = "py38"
+target-version = "py39"
 
 [lint]
 ignore = []
