improve usage of enum types

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,7 +8,7 @@ on:
 env:
   IMAGE_NAME: python-snap7
 jobs:
-  push:
+  build-and-push-container-image:
     runs-on: ubuntu-latest
     permissions:
       packages: write
