--- a/.github/workflows/linux-test-with-deb.yml
+++ b/.github/workflows/linux-test-with-deb.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
-        runs-on: ["ubuntu-20.04", "ubuntu-22.04"]
+        runs-on: ["ubuntu-20.04", "ubuntu-22.04", "ubuntu-24.04"]
     runs-on: ${{ matrix.runs-on }}
     steps:
       - name: Checkout
