Fix read the docs & improve use of enum types (#515)
* add readthedocs config

* improve usage of enum types

* make typing consistent

* make enums intenums

* fix tox

* restructure testing, update osx

* fix mypy

* remove custom pip repo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ Homepage = "https://github.com/gijzelaerr/python-snap7"
 Documentation = "https://python-snap7.readthedocs.io/en/latest/"
 
 [project.optional-dependencies]
-test = ["pytest", "mypy", "types-setuptools", "ruff", "types-click"]
+test = ["pytest", "mypy", "types-setuptools", "ruff", "tox", "types-click"]
 cli = ["rich", "click" ]
 doc = ["sphinx", "sphinx_rtd_theme"]
 
