--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,8 +8,8 @@ on:
 env:
   IMAGE_NAME: python-snap7
 jobs:
-  push:
-    runs-on: ubuntu-latest
+  build-and-push-container-image:
+    runs-on: ubuntu-20.04
     permissions:
       packages: write
       contents: read
