--- a/.github/workflows/linux-build-test-arm64.yml
+++ b/.github/workflows/linux-build-test-arm64.yml
@@ -1,4 +1,4 @@
-name: Build and test wheels ARM64
+name: Build and test wheels linux/arm64
 on:
   push:
     branches: [master]
@@ -34,7 +34,7 @@ jobs:
           name: wheels
           path: wheelhouse/*.whl
 
-  test-wheels-arm64:
+  linux-test-arm64:
     name: Testing wheel for arm64
     needs: linux-build-arm64
     runs-on: ubuntu-20.04
@@ -61,6 +61,7 @@ jobs:
           docker run --rm --interactive -v $PWD/tests:/tests \
             -v $PWD/pyproject.toml:/pyproject.toml \
             -v $PWD/wheelhouse:/wheelhouse \
+            --platform linux/arm64 \
             "arm64v8/python:${{ matrix.python-version }}-bookworm" /bin/bash -s <<EOF
           python3 -m venv venv
           venv/bin/pip install --upgrade pip
