--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ commands =
 basepython = python3.10
 deps = -r{toxinidir}/requirements-dev.txt
 skip_install = true
-commands = mypy {toxinidir}/snap7 {toxinidir}/tests
+commands = mypy {toxinidir}/snap7 {toxinidir}/tests {toxinidir}/example
 
 
 [testenv:lint-ruff]
