--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -1,6 +1,10 @@
-name: Publish distribution 📦 to TestPyPI
+name: Publish distribution 📦 to Test PyPI
 
 on:
+  push:
+    branches: [master]
+  pull_request:
+    branches: [master]
   workflow_run:
     workflows:
       - "Build and test wheels linux/amd64"
